# AGKIDE

./: .gitignore  AGKIDE.sln  AGKIDE.vcproj  AGKIDE.vcxproj  AGKIDE.vcxproj.filters  GeanyMacConfig.txt  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  agk.exe.manifest  autogen.sh  autogen_setup.sh  bundle.sh  bundleNew.sh  bundleNewMike.sh  bundleNewPaul.sh  bundleTrial.sh  bundleTrialMike.sh  bundleTrialPaul.sh  config.h.in  config.status  configure  configure.ac  exportVars.sh  geany.desktop  geany.pc  geany.spec  geany_private.rc  libtool  linux_bundle.sh  makefile.win32  wscript
AGKIDE.xcodeproj/: project.pbxproj
AGKIDE.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
build-extra/: gdk-pixbuf.loaders  icon-theme.cache
data/: AGK2EULA.txt  filetype_extensions.conf  filetypes.agk  filetypes.common  geany.glade  geany.gtkrc.mac  geany.gtkrc.windows  ui_toolbar.xml
data/android/: readme.txt
data/colorschemes/: agkdark.conf  alt.conf  amiga.conf  tango-dark.conf
data/tags/: main.agc.tags
doc/: Makefile.am  Makefile.in  geany.1
icons/: Makefile  Makefile.am  Makefile.in
icons/16x16/: Makefile  Makefile.am  Makefile.in
icons/24x24/: Makefile  Makefile.in
icons/32x32/: Makefile  Makefile.in
icons/48x48/: Makefile  Makefile.am  Makefile.in
icons/scalable/: Makefile  Makefile.am  Makefile.in
icons/tango/: Makefile  Makefile.in
plugins/: Makefile  Makefile.am  Makefile.in  makefile.win32  splitwindow.c
po/: Makefile  de.po  es.po  fr.po  hi.po  it.po  ja.po  ru.po  zh_CN.po
scintilla/: Makefile  Makefile.in
scintilla/gtk/: PlatGTK.cxx  ScintillaGTK.cxx
scintilla/include/: Makefile  Makefile.in  SciLexer.h  Scintilla.h
scintilla/lexers/: LexBasic.cxx
scintilla/lexlib/: StyleContext.h
scintilla/src/: AutoComplete.cxx  Catalogue.cxx  Document.cxx  Editor.cxx
src/: Makefile  Makefile.am  Makefile.in  about.c  build.c  build.h  callbacks.c  callbacks.h  config.h  dialogs.c  document.c  document.h  editor.c  editor.h  filetypes.c  filetypes.h  gb.c  geany.h  geanyobject.c  geanyobject.h  highlighting.c  highlightingmappings.h  keybindings.c  keybindings.h  keyfile.c  keyfile.h  main.c  main.h  makefile.win32  msgwindow.c  msgwindow.h  notebook.c  plugins.c  prefs.c  prefs.h  project.c  project.h  sciwrappers.c  search.c  search.h  (+13 more)
tagmanager/: Makefile  Makefile.in
tagmanager/ctags/: Makefile  Makefile.in  basic.c  ctags.c  parse.c  parse.h  parsers.h
tagmanager/mio/: Makefile  Makefile.in
tests/: Makefile  Makefile.in
(+40 files in other folders)
